--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,10 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+description = "Timer Clock"
+default_envs = d1_mini
+
 [env:d1_mini]
 platform = espressif8266
 board = d1_mini
@@ -18,8 +22,10 @@ monitor_filters =
 	default
 	time
 	esp8266_exception_decoder
-board_build.f_cpu = 160000000L
 lib_deps = 
 	majicdesigns/MD_MAX72XX@^3.3.1
 	arduino-libraries/NTPClient@^3.2.1
 	gyverlibs/EncButton@^2.0
+	LittleFS
+board_build.f_cpu = 160000000L
+board_build.filesystem = littlefs
