--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ include
 !.pio/build/
 .pio/build/*
 !.pio/build/d1_mini/
+!.pio/build/lolin_s2_mini
 .pio/build/d1_mini/*
 !.pio/build/d1_mini/firmware.bin
 !.pio/build/d1_mini/littlefs.bin
+.pio/build/lolin_s2_mini/*
+!.pio/build/lolin_s2_mini/firmware.bin
+!.pio/build/lolin_s2_mini/littlefs.bin
