ESP32S2 support + bugfixes and enhancements

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@ include
 !.pio/build/d1_mini/firmware.bin
 !.pio/build/d1_mini/littlefs.bin
 .pio/build/lolin_s2_mini/*
+!.pio/build/lolin_s2_mini/bootloader.bin
 !.pio/build/lolin_s2_mini/firmware.bin
 !.pio/build/lolin_s2_mini/littlefs.bin
+!.pio/build/lolin_s2_mini/partitions.bin
