--- a/platformio.ini
+++ b/platformio.ini
@@ -33,18 +33,19 @@ board_build.filesystem = littlefs
 platform = espressif32
 board = lolin_s2_mini
 framework = arduino
-upload_speed = 921600
-monitor_speed = 115200
-monitor_filters = 
-	default
-	time
-	esp32_exception_decoder
 lib_deps = 
 	majicdesigns/MD_MAX72XX@^3.3.1
 	gyverlibs/EncButton@^2.0
 	LittleFS
 board_build.f_cpu = 80000000L
-upload_port = COM8
-monitor_port = COM8
+board_build.filesystem = littlefs
 board_flags = 
 	-D ARDUINO_USB_CDC_ON_BOOT=1
+upload_port = COM5
+upload_speed = 921600
+monitor_port = COM4
+monitor_speed = 115200
+monitor_filters = 
+	default
+	time
+	esp32_exception_decoder
