--- a/platformio.ini
+++ b/platformio.ini
@@ -38,9 +38,11 @@ lib_deps =
 	gyverlibs/EncButton@^2.0
 	LittleFS
 board_build.f_cpu = 80000000L
+board_build.f_flash = 80000000L
+board_build.flash_mode = qio
 board_build.filesystem = littlefs
 board_flags = 
-	-D ARDUINO_USB_CDC_ON_BOOT=1
+	-D ARDUINO_USB_CDC_ON_BOOT=0
 upload_port = COM5
 upload_speed = 921600
 monitor_port = COM4
